@@ -9,6 +9,7 @@ Bugs fixed:
 - 3539557 Memory leak in providerDrv with property list
 - 3539555 Memory leak in TestInstanceProvider
 - 1901737 Memory leak in internalProvider.c
+- 3539006 Possible indication deadlock
 
 Changes in 1.3.15
 =================
