@@ -1,3 +1,10 @@
+2012-07-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* brokerUpc.c, indCIMXMLExport.c, indCIMXMLHandler.c, interopProvider.c,
+support.c, support.h:
+	[ 3539006 ] Possible indication deadlock 
+
+
 2012-07-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* test/stageschema.sh:
